# voice-into-article

./: .gitignore  ExamScribe.spec  NoteScribe.spec  README.md  pyproject.toml
scripts/: build_exe.ps1  exam_scribe_ui_launcher.py  note_scribe_ui_launcher.py
src/exam_scribe/: audio.py  cli.py  files.py  notes.py  profiles.py  transcribe.py  ui.py
src/exam_scribe/profiles/: aws-saa-c03.toml  custom-example.toml
src/note_scribe/: cli.py  notes.py  profiles.py  transcribe.py  ui.py
src/note_scribe/profiles/: general-notes.toml  meeting-notes.toml  operations-notes.toml
