[project]
name = "note-scribe"
version = "0.1.0"
description = "Local-first note generator from system audio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.2.1",
  "pyaudiowpatch>=0.2.12.8",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
note-scribe = "note_scribe.cli:main"
note-scribe-ui = "note_scribe.ui:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
note_scribe = ["profiles/*.toml"]
